--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </ul>
     </div>
   </nav>
-  <h2 align="center" color="#D49513"><b><em>Content:</em></b>
+  <h2 class="title" align="center" color="#D49513"><b><em>Content:</em></b>
   </h2>
   <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -143,7 +143,50 @@
   </a>
 </div> <br/>
   </div>
-  <h2 align="center" color="#D49513"><b><em>About Me:</em></b></h2>
+  <div class="title">Update Terbaru:</div>
+  <div class="LatestUpdate">
+    <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imageforcalculator.jpg" class="card-img-top" alt="Calculator Project">
+        <div class="card-body">
+          <h5 class="card-title">Project:Calculator</h5>
+          <p class="card-text" align="justify">kalkulator sederhana ,namun dengan style yang berkelas. Kalkulator ini dapat melakukan berbagai operasi matematika sederhana. </p>
+          <a href="#" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imageformathsolver.jpg" class="card-img-top" alt="math solver">
+        <div class="card-body">
+          <h5 class="card-title">Project:Math Solver</h5>
+          <p align="justify" class="card-text">Ini adalah program yang cukup mengagumkan. Program ini dapat menyelesaikan persamaan linear 2 variabel dan 3 variabel. Baca petunjuk sebelum digunakan.</p>
+          <a href="#" class="btn btn-primary">lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="gambarcaesarcipher.png" class="card-img-top" alt="Caesar Cipher">
+        <div class="card-body">
+          <h5 class="card-title">Blog:Teknik Enkripsi Caesar </h5>
+          <p align="justify" class="card-text">Caesar Cipher merupakan salah satu teknik enkripsi yang paling sederhana. teknik ini menggeser huruf huruf yang ingin dienkripsi dengan pergeseran tertentu </p>
+          <a href="#" class="btn btn-primary">lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imageforguessnumbergame.jpg" class="card-img-top" alt="Number-Guessing Game">
+        <div class="card-body">
+          <h5 class="card-title">Project:Game Tebak Angka</h5>
+          <p class="card-text">Game ini madalah game menebak angka. Program komputer telah memilih angka secara acak, dan tugas anda adalah menebak angka pilihan tersebut.</p>
+          <a href="#" class="btn btn-primary">lihat</a>
+        </div>
+      </div>
+    </div>
+  </div> 
+  <h2 class="title" align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa, web developer, dan programmer. Ia sangat antusias ketika menemukan hal yang menantang, seperti teka-teki, dan tentu saja subjek matematika dan fisika. Ia sekarang duduk di bangku SMA kelas XII. Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic), javascript(basic), dan juga python (intermediate). selain seorang programmer, fikri juga seorang fisikawan.</b></em></p>
