--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Calculator</h5>
           <p class="card-text" align="justify">kalkulator sederhana ,namun dengan style yang berkelas. Kalkulator ini dapat melakukan berbagai operasi matematika sederhana. </p>
-          <a href="#" class="btn btn-primary">Lihat</a>
+          <a href="Calculator.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Math Solver</h5>
           <p align="justify" class="card-text">Ini adalah program yang cukup mengagumkan. Program ini dapat menyelesaikan persamaan linear 2 variabel dan 3 variabel. Baca petunjuk sebelum digunakan.</p>
-          <a href="#" class="btn btn-primary">lihat</a>
+          <a href="Math_solver.html" class="btn btn-primary">lihat</a>
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@
         <div class="card-body">
           <h5 class="card-title">Blog:Teknik Enkripsi Caesar </h5>
           <p align="justify" class="card-text">Caesar Cipher merupakan salah satu teknik enkripsi yang paling sederhana. teknik ini menggeser huruf huruf yang ingin dienkripsi dengan pergeseran tertentu </p>
-          <a href="#" class="btn btn-primary">lihat</a>
+          <a href="EnkripsiCaesar.html" class="btn btn-primary">lihat</a>
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Game Tebak Angka</h5>
           <p class="card-text">Game ini madalah game menebak angka. Program komputer telah memilih angka secara acak, dan tugas anda adalah menebak angka pilihan tersebut.</p>
-          <a href="#" class="btn btn-primary">lihat</a>
+          <a href="Guess_number_game.html" class="btn btn-primary">lihat</a>
         </div>
       </div>
     </div>
