--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </a>
 </div> <br/>
   </div>
-  <div class="title">Update Terbaru:</div>
+  <div class="title">Update :</div>
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
