--- a/Contact-me.html
+++ b/Contact-me.html
@@ -25,7 +25,7 @@
     <textarea required class="form-control" id="exampleFormControlTextarea1" name="message" rows="5"></textarea>
   </div>
   <!-- your other form fields go here -->
-  <button type="submit" type="button" class="btn btn-outline-success">Success</button>
+  <button type="submit" type="button" class="btn btn-outline-success">Kirim Pesan</button>
   </form> <br />
   <div class="sosmed">Sosial Media:</div>
 <div class="logososmed">
