--- a/index.html
+++ b/index.html
@@ -143,6 +143,47 @@
   </a>
 </div> <br/>
   </div>
+
+<div class="background-timeline">
+  <p class="programmingJourney">My Programming Journey</p>
+  <section class="timeline">
+    <div class="time">
+      <h4>September 2018</h4>
+      <p class="pe">Kelas 10 SMA. Saat itu adalah saat pertama kali saya tertarik pada bidang programming. saya dikenalkan dengan dunia programming oleh guru saya di sekolah saat kelas TIK (Teknologi Informasi & Komunikasi). saat itu saya diperenalkan dengan bahasa pemrograman Pascal </p>
+    </div>
+    <div class="time">
+      <h4>Oktober 2018 - September 2019</h4>
+      <p class="pe">Saya mulai menekuni bahasa pemrograman pascal dan sintaks-sintaks nya, hingga saya bisa membuat berbagai program pascal sederhana seperti program game tebak angka, program penghitung luas bidang, dan sebagainya</p>
+    </div>
+    <div class="time">
+      <h4>Desember 2019</h4>
+      <p class="pe">Setelah cukup paham dengan bahasa pascal, saya mempelajari bahasa pemrograman baru, bahasa python. pada waktu itu saya tertarik pada bahasa python karena sintaks nya yang relatif lebih mudah dibanding bahasa lain dan bahasa python juga digunakan dalam ruang lingkuo yang luas. saya pertama kali belajar bahasa python menggunakan sebuah buku yang saya beli waktu itu.</p>
+    </div>
+    <div class="time">
+      <h4>Januari 2020-April 2020</h4>
+      <p class="pe">Saya mulai belajar pada bulan Januari karena bulan sebelumnya saya sibuk mempersiapkan Olimpiade Fisika yang saya ikuti. Saya belajar bahasa python dari berbagai macam sumber seperti buku, youtbube dan website - website yang membahas tentang programming.</p>
+    </div>
+    <div class="time">
+      <h4>Mei 2020</h4>
+      <p class="pe"> Saya mempelajari tentang pemrograman website. Saya pertama kali belajar di website Khan Academy (<em>Thank to Khan Academy</em>) .Dari sana saya belajar banyak tentang pemrograman website. dan dari sana juga lah keinginan saya untuk membangun website sendiri mulai muncul</p>
+    </div>
+    <div class="time">
+      <h4>Juni 2020</h4>
+      <p class="pe">Saya membuat akun github saya dan meng-host website pertama saya disana. Website tersebut hanya menggunakan HTML dan sedikit sentuhan CSS. sangat sederhana</p>
+    </div>
+    <div class="time">
+      <h4>Juli 2020 - Agustus 2020</h4>
+      <p class="pe">Karena tidak puas dengan website yang sebelumnya, saya membuat website baru, dengan lebih banyak penggunakan style CSS dan juga bahasa pemrograman javascript. Disaat ini pula saya mempelajari bahasa Javascript. Dan disaat yang bersamaan saya mempelajari tentang Python GUI (Graphical User Interface) menggunakan library Tkinter.</p>
+    </div>
+    <div class="time">
+      <h4>Agustus 2020 - Sekarang</h4>
+      <p class="pe">Saya mulai menuliskan Blog pada website saya dan terus meng-upgrade style CSS nya. Dan akhir-akhir kni saya menempatkan semua project javascript saya, seperti program Kriptografi sederhana, game, dan kalkulator, sembari terus belajar tentang bahasa pemrograman Python. Sungguh hari yang melelahkan, namun menyenangkan</p>
+    </div>
+  </section>
+</div>  
+
+
+
   <div class="title">Update :</div>
   <div class="LatestUpdate">
     <div class="item">
