--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     </div>
     <div class="time">
       <h4>Desember 2019</h4>
-      <p class="pe">Setelah cukup paham dengan bahasa pascal, saya mempelajari bahasa pemrograman baru, bahasa python. pada waktu itu saya tertarik pada bahasa python karena sintaks nya yang relatif lebih mudah dibanding bahasa lain dan bahasa python juga digunakan dalam ruang lingkuo yang luas. saya pertama kali belajar bahasa python menggunakan sebuah buku yang saya beli waktu itu.</p>
+      <p class="pe">Setelah cukup paham dengan bahasa pascal, saya mempelajari bahasa pemrograman baru, bahasa python. pada waktu itu saya tertarik pada bahasa python karena sintaks nya yang relatif lebih mudah dibanding bahasa lain dan bahasa python juga digunakan dalam ruang lingkup yang luas. saya pertama kali belajar bahasa python menggunakan sebuah buku yang saya beli waktu itu.</p>
     </div>
     <div class="time">
-      <h4>Januari 2020-April 2020</h4>
+      <h4>Januari 2020 - April 2020</h4>
       <p class="pe">Saya mulai belajar pada bulan Januari karena bulan sebelumnya saya sibuk mempersiapkan Olimpiade Fisika yang saya ikuti. Saya belajar bahasa python dari berbagai macam sumber seperti buku, youtbube dan website - website yang membahas tentang programming.</p>
     </div>
     <div class="time">
@@ -178,7 +178,7 @@
     </div>
     <div class="time">
       <h4>Agustus 2020 - Sekarang</h4>
-      <p class="pe">Saya mulai menuliskan Blog pada website saya dan terus meng-upgrade style CSS nya. Dan akhir-akhir kni saya menempatkan semua project javascript saya, seperti program Kriptografi sederhana, game, dan kalkulator, sembari terus belajar tentang bahasa pemrograman Python. Sungguh hari yang melelahkan, namun menyenangkan</p>
+      <p class="pe">Saya mulai menuliskan Blog pada website saya dan terus meng-upgrade style CSS nya. Dan akhir-akhir kni saya menempatkan semua project javascript saya, seperti program Kriptografi sederhana, game, dan kalkulator, sembari terus belajar tentang bahasa pemrograman Python.</p>
     </div>
   </section>
 </div>  
