--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 </div>  
 
 
-
+  <div class="backgroundForUpdate">
+  <div class="title">Update :</div>
   <div class="LatestUpdate">
-    <div class="title">Update :</div>
     <div class="item">
       <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="imageforcalculator.jpg" class="card-img-top" alt="Calculator Project">
@@ -228,6 +228,7 @@
       </div>
     </div>
   </div> 
+  </div>
   <h2 class="title" align="center" color="#D49513"><b><em>About Me:</em></b></h2>
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
