--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </div>  
 
 
-  <div class="title">Update :</div>
+  <div class="titleUpdate">Update :</div>
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
