--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="slide1.jpg" class="d-block w-100" alt="s1">
+      <img id="slide" src="slide1.jpg" class="d-block w-100" alt="s1">
     </div>
     <div class="carousel-item">
-      <img src="slide2.JPG" class="d-block w-100" alt="s2">
+      <img id="slide" src="slide2.JPG" class="d-block w-100" alt="s2">
     </div>
     <div class="carousel-item">
-      <img src="slide3.JPG" class="d-block w-100" alt="s3">
+      <img id="slide" src="slide3.JPG" class="d-block w-100" alt="s3">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
