--- a/BilanganBiner.html
+++ b/BilanganBiner.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="logo_fix.png" height=250px> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Computer Science</title>
+    <title> Bilangam Biner, satu - satunya cara "berkomunikasi" dengan komputer | Fikri Notes</title>
    
 </head>
 <link rel="stylesheet" href="Stylecs.css" type="text/css" />
