--- a/CaesarCipher.html
+++ b/CaesarCipher.html
@@ -5,7 +5,7 @@
      <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caesar Cipher | enkripsi pesan ala julius caesar</title>
+    <title>Alat Enkripsi pesan dengan teknik caesar cipher | Fikri Notes</title>
     <script type="text/javascript" charset="utf-8" src="CaesarCipher.js">
     </script>
     
