--- a/EnkripsiCaesar.html
+++ b/EnkripsiCaesar.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="logo_fix.png" height=250px> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Enkripsi Caesar</title>
+    <title>Teknik Enkripsi Yang Digunakan Julius Caesar | Fikri Notes</title>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Share&display=swap" rel="stylesheet">
     
