--- a/Guess_number_game.html
+++ b/Guess_number_game.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Guess Number Game | Fikri Notes</title>
+    <title> Guess Number Game, Game Tebak Angka oleh Fikri Mulyana Setiawan | Fikri Notes</title>
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
      <link rel="stylesheet" href="Guess_number_game.css" type="text/css" />
      <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@300&family=Girassol&display=swap" rel="stylesheet">
