--- a/Math-menu.html
+++ b/Math-menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Matematika | Fikri Notes</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="Style-math-menu.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Coda&family=Press+Start+2P&family=Unica+One&display=swap" rel="stylesheet">
