--- a/Physics_menu.html
+++ b/Physics_menu.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Fisika | Menu Blog Fisika | Fikri Notes</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="Physics_menu.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Coda&family=Press+Start+2P&family=Unica+One&display=swap" rel="stylesheet">
