--- a/Turunan-bilangan-euler.html
+++ b/Turunan-bilangan-euler.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kalkulus</title>
+    <title>Turunan konstanta/bilangan euler | kalkulus | Fikri Notes</title>
     <style type="text/css" media="all">
       h1{font-family:cursive;}
       body{background-image:url("Kalkulus.JPG");}
