--- a/Turunan-ln-x.html
+++ b/Turunan-ln-x.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Turunan Fungsi y=ln|x|</title>
+    <title>Turunan Fungsi ln x | Kalkulus | Fikri Notes</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style-turunan-ln-x.css" type="text/css">
