--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         <li class="nav-item">
           <a class="nav-link" href="Contact-me.html">Contact Me</a>
         </li>
+        <div width="auto" background-color="black">
+            <script async src="https://cse.google.com/cse.js?cx=34d711fe9eacf9f40"></script>
+            <div class="gcse-search"></div>
+          </div>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Quick link
