--- a/CaesarCipher.html
+++ b/CaesarCipher.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Caesar Cipher | teknik enkripsi ala julius caesar | Fikri Notes</title>
+    <link rel="icon" href="logo_fix.png" height=250px> 
     <script type="text/javascript" charset="utf-8" src="CaesarCipher.js">
     </script>
     
