--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="icon" href="logo_fix.png" height=250px>
   <meta charset="utf-8">
+  <meta name="theme-color" content="#1B65E8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
   <link href="https://fonts.googleapis.com/css2?family=Coda&display=swap" rel="stylesheet">
