--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
   <div class="titleUpdate">Update :</div>
   <div class="LatestUpdate">
     <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imagefordonkeygame.jpg" class="card-img-top" alt="Calculator Project">
+        <div class="card-body">
+          <h5 class="card-title">Project:Donkey.js Game</h5>
+          <p class="card-text" align="justify">Game arcade sederhana. dalam permainan ini,kamu harus terus berkendara sambil menghindari keledai yang akan menghalangi jalanmu</p>
+          <a href="Donkeygame.html" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
       <div class="card"  style="width: 18rem;">
         <img class="update" height="160" width="290" src="imageforencryptionegine.jpg" class="card-img-top" alt="Caesar Cipher Encryption">
         <div class="card-body">
