--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         <li class="nav-item">
           <a class="nav-link" href="TermOfUse.html">Terms of Use</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Donkeygame.html">Donkey.js Game</a>
+        </li>
         <div width="auto" background-color="black">
             <script async src="https://cse.google.com/cse.js?cx=d35b9e14fb3d25e66"></script>
             <div class="gcse-search"></div>
