--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
         <li class="nav-item">
           <a class="nav-link" href="TermOfUse.html">Terms of Use</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Donkeygame.html">Donkey.js Game</a>
-        </li>
         <div width="auto" background-color="black">
             <script async src="https://cse.google.com/cse.js?cx=d35b9e14fb3d25e66"></script>
             <div class="gcse-search"></div>
@@ -110,6 +107,7 @@
             Quick link
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> 
             <a class="dropdown-item" href="Calculator.html">Calculator</a>
             <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
             <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
