--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -48,7 +48,7 @@
       <th><a href="Stopwatch.html">- Stopwatch</a></th>
       <th><a href="Guess_number_game.html">- Guess-number Game</a></th> 
     </tr>
-      <th><a href="Stopwatch.html">- Donkey.js Game</a></th>
+      <th><a href="Donkeygame.html">- Donkey.js Game</a></th>
     <tr>
     </tr>
   </table>
