--- a/computerscience.html
+++ b/computerscience.html
@@ -38,10 +38,11 @@
         <a href="BilanganBiner.html">Bilangan biner</a>
       </th>
       <th><a href="EnkripsiCaesar.html">Caesar Cipher</a></th>
-      <td>
-        
-      </td>
     </tr>
+    <tr>
+       <th><a href="think-like-a-coder.html>Think like a coder</a></th>
+    </tr>
+
     
   </table>
 </div>
