--- a/computerscience.html
+++ b/computerscience.html
@@ -40,7 +40,7 @@
       <th><a href="EnkripsiCaesar.html">Caesar Cipher</a></th>
     </tr>
     <tr>
-       <th><a href="think-like-a-coder.html>Think like a coder</a></th>
+       <th><a href="think-like-a-coder.html">Think like a coder</a></th>
     </tr>
 
     
