--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           <a class="nav-link" href="Javascriptproject-menu.html">Javascript Project</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="My_album.html">My Album</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="Contact-me.html">Contact Me</a>
         </li>
         <li class="nav-item">
