--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="icon" href="logo_fix.png" height=250px>
+  <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
   <meta charset="utf-8">
   <meta name="theme-color" content="#1B65E8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
