--- a/My_album.html
+++ b/My_album.html
@@ -69,16 +69,16 @@
 <div class="klaster1">Foto Pirbadi :</div>
 <div class="container1">
   <div class="item1">
-    <img src="f1.jpg" alt="foto" />
+    <a href="f1.jpg"><img src="f1.jpg" alt="foto" /></a>
   </div>
   <div class="item1">
-    <img src="f17.jpeg" alt="foto" />
+    <a href="f17.jpg"><img src="f17.jpeg" alt="foto" /></a>
   </div>
   <div class="item1">
-    <img src="f13.jpg" alt="foto" />
+    <a href="f13.jpg"><img src="f13.jpg" alt="foto" /></a>
   </div>
   <div class="item1">
-    <img src="f16.jpg" alt="foto" />
+    <a href="f16.jpg"><img src="f16.jpg" alt="foto" /></a>
   </div>
 </div>
 
@@ -86,43 +86,43 @@
 
 <div class="container2">
   <div class="item2">
-    <img src="f3.jpg" alt="foto" />
+    <a href="f3.jpg"><img src="f3.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f2.jpg" alt="foto" />
+    <a href="f2.jpg"><img src="f2.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f4.jpg" alt="foto" />
+    <a href="f4.jpg"><img src="f4.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f5.jpg" alt="foto" />
+    <a href="f5.jpg"><img src="f5.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f6.jpg" alt="foto" />
+    <a href="f6.jpg"><img src="f6.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f7.jpg" alt="foto" />
+    <a href="f7.jpg"><img src="f7.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f8.jpg" alt="foto" />
+    <a href="f8.jpg"><img src="f8.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f9.jpg" alt="foto" />
+    <a href="f9.jpg"><img src="f9.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f10.jpg" alt="foto" />
+    <a href="f10.jpg"><img src="f10.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f11.jpg" alt="foto" />
+    <a href="f11.jpg"><img src="f11.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f12.jpg" alt="foto" />
+    <a href="f12.jpg"><img src="f12.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f14.jpg" alt="foto" />
+    <a href="f14.jpg"><img src="f14.jpg" alt="foto" /></a>
   </div>
   <div class="item2">
-    <img src="f15.jpg" alt="foto" />
+    <a href="f15.jpg"><img src="f15.jpg" alt="foto" /></a>
   </div>
 </div>
 
