--- a/My_album.html
+++ b/My_album.html
@@ -72,7 +72,7 @@
     <a href="f1.jpg"><img src="f1.jpg" alt="foto" /></a>
   </div>
   <div class="item1">
-    <a href="f17.jpg"><img src="f17.jpeg" alt="foto" /></a>
+    <a href="f17.jpeg"><img src="f17.jpeg" alt="foto" /></a>
   </div>
   <div class="item1">
     <a href="f13.jpg"><img src="f13.jpg" alt="foto" /></a>
