--- a/Flatearth.html
+++ b/Flatearth.html
@@ -2,7 +2,21 @@
 <html>
 
 <head>
-    <link rel="icon" href="logo_fix.png" height=250px>
+    
+<!DOCTYPE html>
+<html>
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T9QDCNTY1F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T9QDCNTY1F');
+</script>
+  <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alasan kenapa bumi harus bulat | Fikri Notes</title>
