--- a/Physics_menu.html
+++ b/Physics_menu.html
@@ -46,8 +46,11 @@
         <a href="Relativitaskhusus.html">Waktu Bersifat Relatif</a>
       </th>
       <th><a href="Flatearth.html">Bumi Berbentuk Bulat</a></th>
-      <td>
-      </td>
+    </tr>
+    <tr>
+      <th>
+        <a href="Physics_trick_cara_agar_tubuh_tidak_terlempar_saat_berada_di_dalam_mobil_yang_berkelok.html">Physics Trick:1</a>
+      </th>
     </tr>
   </table>
 </div>
