--- a/Physics_trick_cara_agar_tubuh_tidak_terlempar_saat_berada_di_dalam_mobil_yang_berkelok.html
+++ b/Physics_trick_cara_agar_tubuh_tidak_terlempar_saat_berada_di_dalam_mobil_yang_berkelok.html
@@ -102,7 +102,7 @@
   <li>$F_{sp}$= gaya sentripetal</li>
   </ul>
   </div>
-  <p>gaya sentrifugal selalu mengarah menjauhi titik pusat lingkaran. arah ini dapat kita ketahui melalui operasi vektor sederhana. nah, dari sini lah solusi untuk masalah. tadi mulai muncul.berdasarkan hukum 1 newton, kita tau bahwa jika kita ingin diam, maka resultan gaya yang bekerja pada tubuh kita harus sama dengan nol.jika gaya sentrifugal yang bekerja pada tubuh kita mengarah ke luar lingkaran, maka kita harus memberikan gaya pada tubuh kita yang arahnya menuju ke pusat lingkaran sehingga total gaya yang bekerja sama dengan nol, dan kita pun~secara teori~tidak akan merasakan gaya sentrifugal lagi, sehingga kita tidak skan merasa terlempar lagi </p>
+  <p>gaya sentrifugal selalu mengarah menjauhi titik pusat lingkaran. arah ini dapat kita ketahui melalui operasi vektor sederhana. nah, dari sini lah solusi untuk masalah. tadi mulai muncul.berdasarkan hukum 1 newton, kita tau bahwa jika kita ingin diam, maka resultan gaya yang bekerja pada tubuh kita harus sama dengan nol.jika gaya sentrifugal yang bekerja pada tubuh kita mengarah ke luar lingkaran, maka kita harus memberikan gaya pada tubuh kita yang arahnya menuju ke pusat lingkaran sehingga total gaya yang bekerja sama dengan nol. Tapi bagaimana caranya? Caranya yaitu dengan memiringkan badan anda ke pusat lintasan lingkaran yang anda lalui. Alternatif lain : miringkan badan anda ke arah mobil berbelok </p>
   <hr />
   <p class="copyright">&copy; Fikri Mulyana Setiawan</p>
   <script type="text/x-mathjax-config">
