--- a/Math-menu.html
+++ b/Math-menu.html
@@ -52,6 +52,11 @@
       </th>
       
     </tr>
+    <tr>
+      <th>
+        <a href="Maclaurin-series.html>Maclaurin Series</a>
+      </th>
+    </tr>
   </table>
 </div>
 <script type="text/x-mathjax-config">
